# rust-puccini

./: Cargo.toml  README.md  TODO
cli/: Cargo.toml
csar/: Cargo.toml
tosca/: Cargo.toml
tosca-2.0-functions/: Cargo.toml
tosca-2.0-functions/src/: dispatcher.rs
tosca-2.0-functions/src/data/: comparator.rs  expression.rs  mod.rs  number.rs  scalar.rs  timestamp.rs  tosca_entity.rs  version.rs
tosca-2.0-functions/src/data/schema/: coerce.rs  mod.rs  primitive.rs  scalar.rs  schema.rs  struct.rs  value.rs
tosca-2.0-functions/src/functions/: mod.rs
tosca-2.0-functions/src/functions/arithmetic/: ceil.rs  difference.rs  floor.rs  product.rs  quotient.rs  remainder.rs  round.rs  sum.rs
tosca-2.0-functions/src/functions/boolean/: mod.rs
tosca-2.0-functions/src/functions/collection/: concat.rs  join.rs  length.rs  token.rs
tosca-2.0-functions/src/functions/data/: is_a.rs  list.rs  map.rs  mod.rs  scalar.rs  timestamp.rs  version.rs
tosca-2.0-functions/src/functions/graph/: available_allocation.rs  get_artifact.rs  get_attribute.rs  get_input.rs  get_property.rs  node_index.rs  relationship_index.rs  select_capability.rs  value.rs
tosca-2.0-functions/src/functions/puccini/: apply.rs  assert.rs  evaluate.rs  mod.rs  schema.rs
tosca-2.0-functions/src/functions/set/: intersection.rs  union.rs
tosca/src/: lib.rs
tosca/src/dialect/: mod.rs
tosca/src/dialect/tosca_2_0/: mod.rs
tosca/src/grammar/: index.rs  macros.rs.old  mod.rs  old_package.rs
tosca/src/grammar/catalog/: complete.rs  namespace.rs
tosca/src/grammar/data/: indexed_full_name.rs  metadata.rs  mod.rs  namespace.rs.old  range.rs  tagged_values.rs  version.rs
tosca/src/grammar/depot/: compile.rs  complete.rs  debug.rs  depict.rs  depot.rs  dialects.rs  entities.rs  load.rs  mod.rs  namespace.rs  sources.rs
tosca/src/grammar/dialect/: dialect.rs  id.rs  implementation.rs
tosca/src/grammar/entity/: call_stack.rs  entity.rs  into_scoped.rs  kind.rs  mod.rs  subentity.rs  type.rs
tosca/src/grammar/errors/: cyclical_derivation.rs  missing_required.rs  mod.rs  name_reused.rs  source_not_loaded.rs  tosca.rs  undeclared.rs  unknown_type.rs  unsupported_dialect.rs  unsupported_source.rs  wrong_type.rs
tosca/src/grammar/name/: full_name.rs  name.rs  scope.rs
tosca/src/grammar/old_entities/: assignment.rs  assignments.rs  definition.rs  definitions.rs  entity.rs  fields.rs.old  file.rs  id.rs  importable.rs  mod.rs  template.rs  templates.rs  type.rs  types.rs
tosca/src/grammar/source/: debug.rs  entities.rs  id.rs  mod.rs  namespace.rs
tosca/src/grammar/utils/: compile.rs  complete.rs  floria.rs  if_none.rs  into_scoped.rs  mod.rs  old.rs  resolve.rs  validate.rs
tosca/src/parse/: errors.rs  file.rs  mod.rs  parser.rs
(+109 files in other folders)
